# vanishdrop

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SHOWCASE.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.repobility/: access.yml
app/: main.py
docs/: scan-1-result.txt
docs/adr/: 0001-record-architecture-decisions.md  0002-capability-url-authorization.md  0003-aes-gcm-via-web-crypto.md  0004-python-fastapi-vue.md  0005-no-download-receipts.md  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: humans.txt  llms.txt  robots.txt  sitemap.xml
frontend/public/.well-known/: security.txt
frontend/src/: App.vue  crypto.ts  style.css
frontend/src/components/: Compose.vue  Viewer.vue
tests/: conftest.py  test_auth.py  test_server.py
