[project]
name = "vanishdrop"
version = "0.1.0"
description = "End-to-end encrypted one-time file sharing. Server only holds ciphertext blobs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mohammed Aljefairi", email = "mohammedaljefairi@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
]

[project.urls]
Homepage = "https://github.com/repobility/vanishdrop"
Repository = "https://github.com/repobility/vanishdrop"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
